exemple.output
Grammar

    0 $accept: programa $end

    1 programa: programa expressio
    2         | expressio

    3 expressio: expressio_aritmetica
    4          | expressio_bool

    5 expressio_bool: ID ASSIGN orlist ENDLINE
    6               | orlist ENDLINE

    7 expressio_aritmetica: ID ASSIGN sumrest ENDLINE
    8                     | sumrest ENDLINE

    9 bool_value: ID_BOOL
   10           | BOOLEAN
   11           | OP orlist CP
   12           | sumrest GREATERTHAN sumrest
   13           | sumrest GREATEREQ sumrest
   14           | sumrest LESSTHAN sumrest
   15           | sumrest LESSEQ sumrest
   16           | sumrest EQ sumrest
   17           | sumrest DIF sumrest

   18 orlist: orlist OR andlist
   19       | andlist

   20 andlist: andlist AND bool_value
   21        | NOT bool_value
   22        | bool_value

   23 matrix_value: FLOAT
   24             | INTEGER

   25 matrix: matrix PC row
   26       | row

   27 row: row SPACE matrix_value
   28    | matrix_value

   29 sumrest: sumrest SUMA mullist
   30        | sumrest RESTA mullist
   31        | mullist

   32 mullist: mullist MUL powlist
   33        | mullist DIV powlist
   34        | mullist MOD powlist
   35        | powlist

   36 powlist: powlist POW valor
   37        | valor

   38 valor: FLOAT
   39      | INTEGER
   40      | STRING
   41      | OP sumrest CP
   42      | ID
   43      | OC matrix CC
   44      | ID OC sumrest CC
   45      | ID OC sumrest COMMA sumrest CC


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGN <st.value_data.sense_valor> (258) 5 7
    ENDLINE <st.value_data.sense_valor> (259) 5 6 7 8
    INTEGER <st.value_data.enter> (260) 24 39
    ID <st.value_data.ident> (261) 5 7 42 44 45
    ID_BOOL <st.value_data.ident> (262) 9
    FLOAT <st.value_data.real> (263) 23 38
    STRING <st.value_data.ident> (264) 40
    BOOLEAN <st.value_data.boolean> (265) 10
    SUMA (266) 29
    RESTA (267) 30
    MUL (268) 32
    DIV (269) 33
    MOD (270) 34
    POW (271) 36
    OP (272) 11 41
    CP (273) 11 41
    OC (274) 43 44 45
    CC (275) 43 44 45
    PC (276) 25
    SPACE (277) 27
    COMMA (278) 45
    GREATERTHAN (279) 12
    LESSTHAN (280) 14
    GREATEREQ (281) 13
    LESSEQ (282) 15
    EQ (283) 16
    DIF (284) 17
    NOT (285) 21
    AND (286) 20
    OR (287) 18


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    programa <st> (34)
        on left: 1 2
        on right: 0 1
    expressio <st> (35)
        on left: 3 4
        on right: 1 2
    expressio_bool <st> (36)
        on left: 5 6
        on right: 4
    expressio_aritmetica <st> (37)
        on left: 7 8
        on right: 3
    bool_value <st> (38)
        on left: 9 10 11 12 13 14 15 16 17
        on right: 20 21 22
    orlist <st> (39)
        on left: 18 19
        on right: 5 6 11 18
    andlist <st> (40)
        on left: 20 21 22
        on right: 18 19 20
    matrix_value <st> (41)
        on left: 23 24
        on right: 27 28
    matrix <st> (42)
        on left: 25 26
        on right: 25 43
    row <st> (43)
        on left: 27 28
        on right: 25 26 27
    sumrest <st> (44)
        on left: 29 30 31
        on right: 7 8 12 13 14 15 16 17 29 30 41 44 45
    mullist <st> (45)
        on left: 32 33 34 35
        on right: 29 30 31 32 33 34
    powlist <st> (46)
        on left: 36 37
        on right: 32 33 34 35 36
    valor <st> (47)
        on left: 38 39 40 41 42 43 44 45
        on right: 36 37


State 0

    0 $accept: . programa $end

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    ID_BOOL  shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    OP       shift, and go to state 7
    OC       shift, and go to state 8
    NOT      shift, and go to state 9

    programa              go to state 10
    expressio             go to state 11
    expressio_bool        go to state 12
    expressio_aritmetica  go to state 13
    bool_value            go to state 14
    orlist                go to state 15
    andlist               go to state 16
    sumrest               go to state 17
    mullist               go to state 18
    powlist               go to state 19
    valor                 go to state 20


State 1

   39 valor: INTEGER .

    $default  reduce using rule 39 (valor)


State 2

    5 expressio_bool: ID . ASSIGN orlist ENDLINE
    7 expressio_aritmetica: ID . ASSIGN sumrest ENDLINE
   42 valor: ID .
   44      | ID . OC sumrest CC
   45      | ID . OC sumrest COMMA sumrest CC

    ASSIGN  shift, and go to state 21
    OC      shift, and go to state 22

    $default  reduce using rule 42 (valor)


State 3

    9 bool_value: ID_BOOL .

    $default  reduce using rule 9 (bool_value)


State 4

   38 valor: FLOAT .

    $default  reduce using rule 38 (valor)


State 5

   40 valor: STRING .

    $default  reduce using rule 40 (valor)


State 6

   10 bool_value: BOOLEAN .

    $default  reduce using rule 10 (bool_value)


State 7

   11 bool_value: OP . orlist CP
   41 valor: OP . sumrest CP

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    ID_BOOL  shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    OP       shift, and go to state 7
    OC       shift, and go to state 8
    NOT      shift, and go to state 9

    bool_value  go to state 14
    orlist      go to state 24
    andlist     go to state 16
    sumrest     go to state 25
    mullist     go to state 18
    powlist     go to state 19
    valor       go to state 20


State 8

   43 valor: OC . matrix CC

    INTEGER  shift, and go to state 26
    FLOAT    shift, and go to state 27

    matrix_value  go to state 28
    matrix        go to state 29
    row           go to state 30


State 9

   21 andlist: NOT . bool_value

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    ID_BOOL  shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    OP       shift, and go to state 7
    OC       shift, and go to state 8

    bool_value  go to state 31
    sumrest     go to state 32
    mullist     go to state 18
    powlist     go to state 19
    valor       go to state 20


State 10

    0 $accept: programa . $end
    1 programa: programa . expressio

    $end     shift, and go to state 33
    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    ID_BOOL  shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    OP       shift, and go to state 7
    OC       shift, and go to state 8
    NOT      shift, and go to state 9

    expressio             go to state 34
    expressio_bool        go to state 12
    expressio_aritmetica  go to state 13
    bool_value            go to state 14
    orlist                go to state 15
    andlist               go to state 16
    sumrest               go to state 17
    mullist               go to state 18
    powlist               go to state 19
    valor                 go to state 20


State 11

    2 programa: expressio .

    $default  reduce using rule 2 (programa)


State 12

    4 expressio: expressio_bool .

    $default  reduce using rule 4 (expressio)


State 13

    3 expressio: expressio_aritmetica .

    $default  reduce using rule 3 (expressio)


State 14

   22 andlist: bool_value .

    $default  reduce using rule 22 (andlist)


State 15

    6 expressio_bool: orlist . ENDLINE
   18 orlist: orlist . OR andlist

    ENDLINE  shift, and go to state 35
    OR       shift, and go to state 36


State 16

   19 orlist: andlist .
   20 andlist: andlist . AND bool_value

    AND  shift, and go to state 37

    $default  reduce using rule 19 (orlist)


State 17

    8 expressio_aritmetica: sumrest . ENDLINE
   12 bool_value: sumrest . GREATERTHAN sumrest
   13           | sumrest . GREATEREQ sumrest
   14           | sumrest . LESSTHAN sumrest
   15           | sumrest . LESSEQ sumrest
   16           | sumrest . EQ sumrest
   17           | sumrest . DIF sumrest
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    ENDLINE      shift, and go to state 38
    SUMA         shift, and go to state 39
    RESTA        shift, and go to state 40
    GREATERTHAN  shift, and go to state 41
    LESSTHAN     shift, and go to state 42
    GREATEREQ    shift, and go to state 43
    LESSEQ       shift, and go to state 44
    EQ           shift, and go to state 45
    DIF          shift, and go to state 46


State 18

   31 sumrest: mullist .
   32 mullist: mullist . MUL powlist
   33        | mullist . DIV powlist
   34        | mullist . MOD powlist

    MUL  shift, and go to state 47
    DIV  shift, and go to state 48
    MOD  shift, and go to state 49

    $default  reduce using rule 31 (sumrest)


State 19

   35 mullist: powlist .
   36 powlist: powlist . POW valor

    POW  shift, and go to state 50

    $default  reduce using rule 35 (mullist)


State 20

   37 powlist: valor .

    $default  reduce using rule 37 (powlist)


State 21

    5 expressio_bool: ID ASSIGN . orlist ENDLINE
    7 expressio_aritmetica: ID ASSIGN . sumrest ENDLINE

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    ID_BOOL  shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    OP       shift, and go to state 7
    OC       shift, and go to state 8
    NOT      shift, and go to state 9

    bool_value  go to state 14
    orlist      go to state 51
    andlist     go to state 16
    sumrest     go to state 52
    mullist     go to state 18
    powlist     go to state 19
    valor       go to state 20


State 22

   44 valor: ID OC . sumrest CC
   45      | ID OC . sumrest COMMA sumrest CC

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 54
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 23

   42 valor: ID .
   44      | ID . OC sumrest CC
   45      | ID . OC sumrest COMMA sumrest CC

    OC  shift, and go to state 22

    $default  reduce using rule 42 (valor)


State 24

   11 bool_value: OP orlist . CP
   18 orlist: orlist . OR andlist

    CP  shift, and go to state 55
    OR  shift, and go to state 36


State 25

   12 bool_value: sumrest . GREATERTHAN sumrest
   13           | sumrest . GREATEREQ sumrest
   14           | sumrest . LESSTHAN sumrest
   15           | sumrest . LESSEQ sumrest
   16           | sumrest . EQ sumrest
   17           | sumrest . DIF sumrest
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist
   41 valor: OP sumrest . CP

    SUMA         shift, and go to state 39
    RESTA        shift, and go to state 40
    CP           shift, and go to state 56
    GREATERTHAN  shift, and go to state 41
    LESSTHAN     shift, and go to state 42
    GREATEREQ    shift, and go to state 43
    LESSEQ       shift, and go to state 44
    EQ           shift, and go to state 45
    DIF          shift, and go to state 46


State 26

   24 matrix_value: INTEGER .

    $default  reduce using rule 24 (matrix_value)


State 27

   23 matrix_value: FLOAT .

    $default  reduce using rule 23 (matrix_value)


State 28

   28 row: matrix_value .

    $default  reduce using rule 28 (row)


State 29

   25 matrix: matrix . PC row
   43 valor: OC matrix . CC

    CC  shift, and go to state 57
    PC  shift, and go to state 58


State 30

   26 matrix: row .
   27 row: row . SPACE matrix_value

    SPACE  shift, and go to state 59

    $default  reduce using rule 26 (matrix)


State 31

   21 andlist: NOT bool_value .

    $default  reduce using rule 21 (andlist)


State 32

   12 bool_value: sumrest . GREATERTHAN sumrest
   13           | sumrest . GREATEREQ sumrest
   14           | sumrest . LESSTHAN sumrest
   15           | sumrest . LESSEQ sumrest
   16           | sumrest . EQ sumrest
   17           | sumrest . DIF sumrest
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    SUMA         shift, and go to state 39
    RESTA        shift, and go to state 40
    GREATERTHAN  shift, and go to state 41
    LESSTHAN     shift, and go to state 42
    GREATEREQ    shift, and go to state 43
    LESSEQ       shift, and go to state 44
    EQ           shift, and go to state 45
    DIF          shift, and go to state 46


State 33

    0 $accept: programa $end .

    $default  accept


State 34

    1 programa: programa expressio .

    $default  reduce using rule 1 (programa)


State 35

    6 expressio_bool: orlist ENDLINE .

    $default  reduce using rule 6 (expressio_bool)


State 36

   18 orlist: orlist OR . andlist

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    ID_BOOL  shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    OP       shift, and go to state 7
    OC       shift, and go to state 8
    NOT      shift, and go to state 9

    bool_value  go to state 14
    andlist     go to state 60
    sumrest     go to state 32
    mullist     go to state 18
    powlist     go to state 19
    valor       go to state 20


State 37

   20 andlist: andlist AND . bool_value

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    ID_BOOL  shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    OP       shift, and go to state 7
    OC       shift, and go to state 8

    bool_value  go to state 61
    sumrest     go to state 32
    mullist     go to state 18
    powlist     go to state 19
    valor       go to state 20


State 38

    8 expressio_aritmetica: sumrest ENDLINE .

    $default  reduce using rule 8 (expressio_aritmetica)


State 39

   29 sumrest: sumrest SUMA . mullist

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    mullist  go to state 62
    powlist  go to state 19
    valor    go to state 20


State 40

   30 sumrest: sumrest RESTA . mullist

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    mullist  go to state 63
    powlist  go to state 19
    valor    go to state 20


State 41

   12 bool_value: sumrest GREATERTHAN . sumrest

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 64
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 42

   14 bool_value: sumrest LESSTHAN . sumrest

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 65
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 43

   13 bool_value: sumrest GREATEREQ . sumrest

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 66
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 44

   15 bool_value: sumrest LESSEQ . sumrest

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 67
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 45

   16 bool_value: sumrest EQ . sumrest

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 68
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 46

   17 bool_value: sumrest DIF . sumrest

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 69
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 47

   32 mullist: mullist MUL . powlist

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    powlist  go to state 70
    valor    go to state 20


State 48

   33 mullist: mullist DIV . powlist

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    powlist  go to state 71
    valor    go to state 20


State 49

   34 mullist: mullist MOD . powlist

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    powlist  go to state 72
    valor    go to state 20


State 50

   36 powlist: powlist POW . valor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    valor  go to state 73


State 51

    5 expressio_bool: ID ASSIGN orlist . ENDLINE
   18 orlist: orlist . OR andlist

    ENDLINE  shift, and go to state 74
    OR       shift, and go to state 36


State 52

    7 expressio_aritmetica: ID ASSIGN sumrest . ENDLINE
   12 bool_value: sumrest . GREATERTHAN sumrest
   13           | sumrest . GREATEREQ sumrest
   14           | sumrest . LESSTHAN sumrest
   15           | sumrest . LESSEQ sumrest
   16           | sumrest . EQ sumrest
   17           | sumrest . DIF sumrest
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    ENDLINE      shift, and go to state 75
    SUMA         shift, and go to state 39
    RESTA        shift, and go to state 40
    GREATERTHAN  shift, and go to state 41
    LESSTHAN     shift, and go to state 42
    GREATEREQ    shift, and go to state 43
    LESSEQ       shift, and go to state 44
    EQ           shift, and go to state 45
    DIF          shift, and go to state 46


State 53

   41 valor: OP . sumrest CP

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 76
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 54

   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist
   44 valor: ID OC sumrest . CC
   45      | ID OC sumrest . COMMA sumrest CC

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40
    CC     shift, and go to state 77
    COMMA  shift, and go to state 78


State 55

   11 bool_value: OP orlist CP .

    $default  reduce using rule 11 (bool_value)


State 56

   41 valor: OP sumrest CP .

    $default  reduce using rule 41 (valor)


State 57

   43 valor: OC matrix CC .

    $default  reduce using rule 43 (valor)


State 58

   25 matrix: matrix PC . row

    INTEGER  shift, and go to state 26
    FLOAT    shift, and go to state 27

    matrix_value  go to state 28
    row           go to state 79


State 59

   27 row: row SPACE . matrix_value

    INTEGER  shift, and go to state 26
    FLOAT    shift, and go to state 27

    matrix_value  go to state 80


State 60

   18 orlist: orlist OR andlist .
   20 andlist: andlist . AND bool_value

    AND  shift, and go to state 37

    $default  reduce using rule 18 (orlist)


State 61

   20 andlist: andlist AND bool_value .

    $default  reduce using rule 20 (andlist)


State 62

   29 sumrest: sumrest SUMA mullist .
   32 mullist: mullist . MUL powlist
   33        | mullist . DIV powlist
   34        | mullist . MOD powlist

    MUL  shift, and go to state 47
    DIV  shift, and go to state 48
    MOD  shift, and go to state 49

    $default  reduce using rule 29 (sumrest)


State 63

   30 sumrest: sumrest RESTA mullist .
   32 mullist: mullist . MUL powlist
   33        | mullist . DIV powlist
   34        | mullist . MOD powlist

    MUL  shift, and go to state 47
    DIV  shift, and go to state 48
    MOD  shift, and go to state 49

    $default  reduce using rule 30 (sumrest)


State 64

   12 bool_value: sumrest GREATERTHAN sumrest .
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40

    $default  reduce using rule 12 (bool_value)


State 65

   14 bool_value: sumrest LESSTHAN sumrest .
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40

    $default  reduce using rule 14 (bool_value)


State 66

   13 bool_value: sumrest GREATEREQ sumrest .
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40

    $default  reduce using rule 13 (bool_value)


State 67

   15 bool_value: sumrest LESSEQ sumrest .
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40

    $default  reduce using rule 15 (bool_value)


State 68

   16 bool_value: sumrest EQ sumrest .
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40

    $default  reduce using rule 16 (bool_value)


State 69

   17 bool_value: sumrest DIF sumrest .
   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40

    $default  reduce using rule 17 (bool_value)


State 70

   32 mullist: mullist MUL powlist .
   36 powlist: powlist . POW valor

    POW  shift, and go to state 50

    $default  reduce using rule 32 (mullist)


State 71

   33 mullist: mullist DIV powlist .
   36 powlist: powlist . POW valor

    POW  shift, and go to state 50

    $default  reduce using rule 33 (mullist)


State 72

   34 mullist: mullist MOD powlist .
   36 powlist: powlist . POW valor

    POW  shift, and go to state 50

    $default  reduce using rule 34 (mullist)


State 73

   36 powlist: powlist POW valor .

    $default  reduce using rule 36 (powlist)


State 74

    5 expressio_bool: ID ASSIGN orlist ENDLINE .

    $default  reduce using rule 5 (expressio_bool)


State 75

    7 expressio_aritmetica: ID ASSIGN sumrest ENDLINE .

    $default  reduce using rule 7 (expressio_aritmetica)


State 76

   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist
   41 valor: OP sumrest . CP

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40
    CP     shift, and go to state 56


State 77

   44 valor: ID OC sumrest CC .

    $default  reduce using rule 44 (valor)


State 78

   45 valor: ID OC sumrest COMMA . sumrest CC

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 23
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    OP       shift, and go to state 53
    OC       shift, and go to state 8

    sumrest  go to state 81
    mullist  go to state 18
    powlist  go to state 19
    valor    go to state 20


State 79

   25 matrix: matrix PC row .
   27 row: row . SPACE matrix_value

    SPACE  shift, and go to state 59

    $default  reduce using rule 25 (matrix)


State 80

   27 row: row SPACE matrix_value .

    $default  reduce using rule 27 (row)


State 81

   29 sumrest: sumrest . SUMA mullist
   30        | sumrest . RESTA mullist
   45 valor: ID OC sumrest COMMA sumrest . CC

    SUMA   shift, and go to state 39
    RESTA  shift, and go to state 40
    CC     shift, and go to state 82


State 82

   45 valor: ID OC sumrest COMMA sumrest CC .

    $default  reduce using rule 45 (valor)
